--- a/package.json
+++ b/package.json
@@ -11,14 +11,23 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.0.1",
+    "@angular/cdk": "^12.2.2",
     "@angular/common": "~12.0.1",
     "@angular/compiler": "~12.0.1",
     "@angular/core": "~12.0.1",
+    "@angular/flex-layout": "^12.0.0-beta.34",
     "@angular/forms": "~12.0.1",
+    "@angular/material": "^12.2.2",
     "@angular/platform-browser": "~12.0.1",
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
-    "rxjs": "~6.6.0",
+    "@ngneat/spectator": "^8.0.3",
+    "@ngrx/effects": "^12.4.0",
+    "@ngrx/store": "^12.4.0",
+    "@ngrx/store-devtools": "^12.4.0",
+    "ngrx-store-logger": "^0.2.4",
+    "rxjs": "^6.6.7",
+    "rxjs-marbles": "^6.0.1",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
@@ -26,6 +35,7 @@
     "@angular-devkit/build-angular": "~12.0.1",
     "@angular/cli": "~12.0.1",
     "@angular/compiler-cli": "~12.0.1",
+    "@ngrx/schematics": "^12.4.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.7.0",
